[package]
name = "jito-client"
version = "0.1.5"
edition = "2024"
authors = ["86maid"]
license = "MIT"
repository = "https://github.com/86maid/jito-client"
keywords = ["jito", "client", "solana", "load-balancer", "balancer"]
categories = ["network-programming", "asynchronous"]
description = "A Rust client for interacting with the Solana Jito network, supporting rate limiting, multi-IP usage, and broadcasting requests to multiple endpoints."

[build-dependencies]
rustc_version = "0.4.1"

[dependencies]
anyhow = "1.0.0"
base64 = "0.22.1"
bincode = "1.3.3"
load-balancer = "0.3.5"
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
] }
serde = "1.0.227"
serde_json = "1.0.145"
futures = "0.3"

[features]
default = ["json", "rustls-tls"]
json = ["reqwest/json"]
rustls-tls = ["reqwest/rustls-tls"]
gzip = ["reqwest/gzip"]
brotli = ["reqwest/brotli"]
cookies = ["reqwest/cookies"]
multipart = ["reqwest/multipart"]
stream = ["reqwest/stream"]
blocking = ["reqwest/blocking"]
deflate = ["reqwest/deflate"]
native-tls = ["reqwest/native-tls"]
